fix stretching bug for profile

--- a/src/components/layout/styles/employee-dashboard-layout.css
+++ b/src/components/layout/styles/employee-dashboard-layout.css
@@ -221,6 +221,7 @@
   border-radius: 50%;
   border: 4px solid var(--secondary-sky-blue);
   margin-bottom: 10px;
+  object-fit: cover;
 }
 
 .cd-profile-card h5 {
